--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Referências de Modelos
 Experimentos - Pré Qualificação
 Experimentos
+Validação U-Net
 training_checkpoints
 checkpoints
 __pycache__
